--- a/lifecycle-data/products/microsoft-net-framework.yml
+++ b/lifecycle-data/products/microsoft-net-framework.yml
@@ -2,14 +2,14 @@
 metadata:
   title: Microsoft .NET Framework
   description: Microsoft .NET Framework volgt het levenscyclusbeleid voor onderdelen.
-  ms.date: 09/13/2021
+  ms.date: 08/09/2022
   keywords: Entity Framework Core
-  ms.openlocfilehash: c43ab1ca761ee8ea89d6b8b2d901c07fa64aa57c
-  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.openlocfilehash: 77ce929eee33e056f320dae333a851deab08c300
+  ms.sourcegitcommit: 7f8eec52b9f5c890d6cb734795818dc72afbdf57
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 03/18/2022
-  ms.locfileid: "4126760"
+  ms.lasthandoff: 09/09/2022
+  ms.locfileid: "4516338"
 name: Microsoft .NET Framework
 summary: >+
   Microsoft .NET Framework volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
@@ -20,7 +20,7 @@ summary: >+
 
   > [!IMPORTANT]
 
-  > .NET Framework 4.5.2, 4.6 en 4.6.1 worden op 26 april 2022 buiten gebruik gesteld. Deze specifieke releases waren voorheen ondertekend met veilig hashalgoritme (SHA-1)-certificaten. Dit algoritme wordt niet langer als veilig beschouwd. Klanten worden aangemoedigd om over te gaan naar SHA-2. Klik [hier](https://devblogs.microsoft.com/dotnet/net-framework-4-5-2-4-6-4-6-1-will-reach-end-of-support-on-april-26-2022) voor meer informatie.
+  > .NET Framework 4.5.2, 4.6 en 4.61 worden op 26 april 2022 buiten gebruik gesteld. Deze specifieke releases waren voorheen ondertekend met veilig hashalgoritme (SHA-1)-certificaten. Dit algoritme is niet langer veilig. Klanten worden aangemoedigd om over te gaan naar SHA-2. Klik [hier](https://devblogs.microsoft.com/dotnet/net-framework-4-5-2-4-6-4-6-1-will-reach-end-of-support-on-april-26-2022) voor meer informatie.
 
 products:
 - dotnet
@@ -28,6 +28,8 @@ policyType: component
 supportDates:
   start: 2006-02-17T00:00:00.000-08:00
 releases:
+- version: .NET Framework 4.8.1
+  startDate: 2022-08-09T00:00:00.000-08:00
 - version: .NET Framework 4.8
   startDate: 2019-04-18T00:00:00.000-08:00
 - version: .NET Framework 4.7.2
