--- a/lifecycle-data/products/sharepoint-server-2013.yml
+++ b/lifecycle-data/products/sharepoint-server-2013.yml
@@ -2,17 +2,20 @@
 metadata:
   title: SharePoint Server 2013
   description: SharePoint Server 2013 volgt het vaste levenscyclusbeleid.
-  ms.date: 09/02/2020
-  keywords: ''
-  ms.openlocfilehash: 5540fd90c60629aa6cf758f1afe2207c25be13f1
-  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.date: 2022/03/25
+  keywords: 
+  ms.openlocfilehash: b2c6f9900ebd3921524b3883329ab80fb3f4685d
+  ms.sourcegitcommit: 7f8eec52b9f5c890d6cb734795818dc72afbdf57
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 03/18/2022
-  ms.locfileid: "4136343"
+  ms.lasthandoff: 09/09/2022
+  ms.locfileid: "4518928"
 name: SharePoint Server 2013
 summary: >+
   SharePoint Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+
+
 
 
 products:
@@ -29,4 +32,4 @@ releases:
 - version: Original Release
   startDate: 2013-01-09T00:00:00.000-08:00
   endDate: 2015-04-14T22:59:59.999-08:00
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Onderhoudsinformatie](/SharePoint/product-servicing-policy/updated-product-servicing-policy-for-sharepoint-2013)\n\n> [!NOTE]\n> Raadpleeg [product-](https://docs.microsoft.com/sharepoint/sharepoint-server) en [ontwikkelaars](https://developer.microsoft.com/sharepoint/docs)documentatie."
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/microsoft-365/enterprise/upgrade-from-sharepoint-2013?view=o365-worldwide)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Onderhoudsinformatie](/SharePoint/product-servicing-policy/updated-product-servicing-policy-for-sharepoint-2013)\n\n\n> [!NOTE]\n> Raadpleeg [product-](https://docs.microsoft.com/sharepoint/sharepoint-server) en [ontwikkelaars](https://developer.microsoft.com/sharepoint/docs) documentatie."
