--- a/lifecycle-data/products/microsoft-identity-manager-2016.yml
+++ b/lifecycle-data/products/microsoft-identity-manager-2016.yml
@@ -2,16 +2,20 @@
 metadata:
   title: Microsoft Identity Manager 2016
   description: Microsoft Identity Manager 2016 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: ea72427890dd1aded761e0370cc22ea191a19b98
-  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.date: 09/15/2022
+  keywords: 
+  ms.openlocfilehash: f4969b3dc67b593cd9884f162d8ad4a06c793074
+  ms.sourcegitcommit: aa3eaa2573e7b3d11f65d12f166e73329011f41d
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 03/18/2022
-  ms.locfileid: "4145815"
+  ms.lasthandoff: 09/15/2022
+  ms.locfileid: "4522268"
 name: Microsoft Identity Manager 2016
 summary: >+
   Microsoft Identity Manager 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+
+
 
 
 products:
@@ -20,15 +24,15 @@ policyType: fixed
 supportDates:
   start: 2015-09-28T00:00:00.000-08:00
   end: 2021-01-12T22:59:59.999-08:00
-  extendedEnd: 2026-01-13T22:59:59.999-08:00
+  extendedEnd: 2029-01-09T22:59:59.999-08:00
 releases:
 - version: Service Pack 2
   startDate: 2019-11-04T00:00:00.000-08:00
-  endDate: 2026-01-13T22:59:59.999-08:00
+  endDate: 2029-01-09T22:59:59.999-08:00
 - version: Service Pack 1
   startDate: 2016-09-20T00:00:00.000-08:00
   endDate: 2020-11-04T22:59:59.999-08:00
 - version: Original Release
   startDate: 2015-09-28T00:00:00.000-08:00
   endDate: 2017-10-10T22:59:59.999-08:00
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuning voor Azure is voor integratieonderdelen van Azure AD beschikbaar tot het einde van de verlengde ondersteuning voor Microsoft Identity Manager 2016.](/microsoft-identity-manager/support-update-for-azure-active-directory-premium-customers)\n* [Azure-ondersteuningsplannen.](https://azure.microsoft.com/support/plans/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Productgegevens](/microsoft-identity-manager/microsoft-identity-manager-2016)"
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuning voor Azure is voor integratieonderdelen van Azure AD beschikbaar tot het einde van de verlengde ondersteuning voor Microsoft Identity Manager 2016.](/microsoft-identity-manager/support-update-for-azure-active-directory-premium-customers)\n* [Azure-ondersteuningsplannen.](https://azure.microsoft.com/support/plans/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Productgegevens](/microsoft-identity-manager/microsoft-identity-manager-2016)\n\n\n> [!NOTE]\n> De einddatum van de ondersteuning voor Microsoft Identity Manager 2016 is uitgesteld van 13 januari 2026 tot 9 januari 2029"
